fix: z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,7 @@ details {
 	background-color: white;
 	border: 1px solid silver;
 	opacity: 0.9;
+	z-index: 10;
 }
 
 .tracks label {
